# tectoneos-installer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: events.rs  main.rs  routes.rs
src/installer/: mod.rs  phone.rs
src/utils/: mod.rs
