[package]
name = "tectone-os-installer"
version = "0.1.0-beta"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio"] }
iced_aw = { version = "0.5.2", features = ["spinner"] }
iced_native = "0.10.3"
open = "5.0.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
